--- a/public/main.css
+++ b/public/main.css
@@ -290,7 +290,7 @@ form > :last-child {
   align-items: center;
   flex-direction: column;
   background-color:#282566;
-  position: relative;
+  position: absolute;
   z-index: 2;
   
 }
@@ -302,14 +302,10 @@ form > :last-child {
 
 .task-form {
   left: 50%;
-    transform: translateX(-50%);
     width: 90vw;
     max-width: var(--fixed-width);
     margin: 0 auto;
     /* margin-top: 6rem; */
-    position: fixed;
-    bottom: 10px;
-    z-index: 1;
 }
 
 
